<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg">
    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  		
  	<RelativeLayout 
  	    android:id="@+id/login_div"
  	    android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:padding="15dip"        
    	android:layout_margin="15dip" 
    	android:background="@drawable/infor_bg" >
  		<!-- 账号 -->
    	<TextView 
    		android:id="@+id/login_user_input"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentTop="true"
    		android:layout_marginTop="5dp"
    	    style="@style/text1"
    		android:text="@string/login_label_username"
    		/>
    	<EditText 
    		android:id="@+id/username_edit"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/login_username_hint"
    		android:layout_below="@id/login_user_input"
    		android:singleLine="true"
    		android:inputType="text"/>
      <!-- 密码 text -->
      <TextView 
        style="@style/text2"
      	android:id="@+id/login_password_input"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/username_edit"
      	android:layout_marginTop="3dp"
      	android:text="@string/login_label_password"/>
      <EditText 
      	android:id="@+id/password_edit"
      	android:layout_width="fill_parent"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/login_password_input"
      	android:password="true"
      	android:singleLine="true"
      	android:inputType="textPassword" />
      <!-- 登录button -->
      <Button 
      	android:id="@+id/signin_button"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/password_edit"
      	android:layout_marginLeft="30dip"
      	android:text="@string/login_label_signin"
      	android:background="@drawable/btn_bg" />
      <!-- 登录button -->
      <Button 
      	android:id="@+id/register_button"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/password_edit"
      	android:layout_centerHorizontal="true"
      	android:layout_marginRight ="15dip"
      	android:layout_toRightOf="@id/signin_button"
      	android:text="@string/login_register_link"
      	android:background="@drawable/btn_bg" />
      <CheckBox android:id="@+id/cb_auto"
          android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_marginRight ="15dip"
	      android:layout_toRightOf="@id/register_button"
	      android:layout_below="@id/password_edit"
	      android:text="记住密码"
	      android:textColor="#000000"          
       />
  	</RelativeLayout>
  
  <RelativeLayout 
      	android:layout_width="fill_parent"
      	android:layout_height="wrap_content" >
    <ImageView android:id="@+id/miniTwitter_logo"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp" />
    <ImageView android:src="@drawable/logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@id/miniTwitter_logo"
      android:layout_alignBottom="@id/miniTwitter_logo"
      android:paddingBottom="8dp"/>
  	</RelativeLayout>
</LinearLayout>